--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.samsungfire.vision.car_license_plate_recog_poc">
+    package="com.samsungfire.vision.mobile_cloud_image_analytics">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -7,7 +7,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="car_license_plate_recog_poc"
+        android:label="SFMI Vision"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
