--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   # Provider pattern
   provider:
 
+  # API Call: http request & response
+  http:
+
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
